--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode production",
-    "build": "webpack --mode development"
+    "dev": "webpack-dev-server  --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
